error solve of online quote and improve layout issues

--- a/quotation_images_feedback/static/src/less/custom_style.css
+++ b/quotation_images_feedback/static/src/less/custom_style.css
@@ -1,3 +1,6 @@
+#quote_content{
+    overflow: auto !important;
+}
 .form_custom_checkbox{
     height: 15px;
     margin-top: 10px;
